# Winter-Run

./: CMakeLists.txt  README.md
src/: camera.cpp  entity.cpp  game.cpp  input.cpp  main.cpp  menu.cpp  particle.cpp  render.cpp  shader.cpp  text_renderer.cpp
src/assets/shader/: color-fs.glsl  fs.glsl  text-vs.glsl  vs.glsl
src/include/: camera.h  entity.h  game.h  input.h  particle.h  shader.h  text_renderer.h
